--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "nombre-App",
+    "name": "Info nasa",
     "slug": "nombre-App",
     "version": "1.0.0",
     "orientation": "portrait",
